--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
-.env
-# Genel .env dosyaları
+# Node.js bağımlılıkları
 node_modules/
-# Ana node_modules (eğer varsa, normalde olmaz)
-.DS_Store
-# macOS specific
+
+# Ortam değişkenleri dosyaları
+.env
+.env.local
+.env.development
+.env.production
+
+# API test istek dosyaları
+# Eğer doğrudan requests.http adıyla kaydediyorsanız, bu satırı ekleyin:
+requests.http
+# Genel olarak tüm .http veya .rest dosyaları için:
+*.http
+*.rest
+# VS Code'daki bazı eklentiler için (örn. Thunder Client)
+.vscode/*.http
+.vscode/*.rest
+
+# Docker özel dosyaları (eğer varsa ve git ile paylaşmak istemiyorsanız)
+# .dockerignore
+
+# Test/Log dosyaları
+*.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-# Sadece genel bir başlangıç, alt klasörler için daha spesifik olabilir
+
+# Üretim için derlenmiş frontend dosyaları
+build/
+dist/
